--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Yugandar's Studio</title>
+        <title>Coaster Studios</title>
         <style>
             @font-face {
                 font-family: 'Courier Prime', sans-serif;
